--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Zadanie domowe z RWD</title>
 </head>
 <body>
-    
+    <div id="photo_container">
+        <div id="text_container">
+            
+        </div>
+    </div>    
 </body>
 </html>
