--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Zadanie domowe z RWD</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="photo_container">
         <div id="text_container">
-            
+            <h1>
+            I am the best<br>
+            <span>Front-End-Developer</span></h1>
         </div>
     </div>    
 </body>
