--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Zadanie domowe z RWD</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="photo_container">
         <div id="text_container">
-            <h1>
-            I am the best<br>
-            <span>Front-End-Developer</span></h1>
+            <h1>I am the best</h1>
+            <h2>Front-End-Developer</h2>
         </div>
     </div>    
 </body>
